<resources>
    <string name="app_name">S37-Uber</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="required_for_this_app">Required for this app</string>
    <string name="enable_now">Enable Now</string>
    <string name="location_permission_not_granted">Location Permission not granted</string>
    <string name="current_location">Current Location</string>
    <string name="where_to">Destination</string>
    <string name="pickup_location">Nurse Start Location</string>
    <string name="request_cab">Request A Visit</string>
    <string name="your_cab_is_arriving">Your Cab is Arriving</string>
    <string name="requesting_your_cab">Requesting Nurse</string>
    <string name="your_cab_is_booked">Your Cab is Booked</string>
    <string name="your_cab_has_arrived">Your Cab has Arrived</string>
    <string name="you_are_on_a_trip">Jessica Marlin (Microbiology) has started the journey at 1:00 PM</string>
    <string name="arriving_shortly">Jessica Marlin (Microbiology) is 5 mins away from your location</string>
    <string name="trip_end">Nurse has reached</string>
    <string name="take_next_ride">Take Next Ride</string>
    <string name="route_not_available_choose_different_locations">Route Not Available: Choose different pickup and drop location</string>
    <string name="info_agenda_text">Baseline visit ABD 1234567890\n\n03:00-3:45pm: Coordinator to collect medical history &amp; medications history\n\nInvestigator to confirm medical history with participant\n\nCoordinator to collect remainder of platform assessments and Urine Pregnancy Test</string>
    <string name="error_message_wrong_cred">Your email and/or password are invalid.</string>
    <string name="error_message_wrong_cred_warning">Your email and/or password are invalid. You have [#] more attempts before your account will be locked.</string>
    <string name="account_locked_message">Sorry, too many wrong attempts. The account is locked.</string>
    <string name="no_account_text">Don’t have an account ?</string>
    <string name="register_text">Register Now</string>
    <string name="already_acc_text">I\'m already a member</string>
    <string name="sign_in_text">Sign In</string>
    <string-array name="signup_fields_array">
        <item>First Name</item>
        <item>Last Name</item>
        <item>Email ID</item>
        <item>Phone Number</item>
        <item>Password</item>
        <item>Confirm Password</item>
        <item>City</item>
        <item>State</item>
    </string-array>
    <string name="success_text">Successful</string>
    <string name="success_message">User has been successfully created</string>
    <string name="dismiss_text">Dismiss</string>
    <string name="email_error_message">Please enter valid email ID</string>
    <string name="password_error_message">Please enter valid password</string>
    <string name="password_unmatched_error_message">Confirm password does not match</string>
</resources>