<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="303dp"
    android:layout_height="255dp"
    android:layout_gravity="center_horizontal"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/successPulseImage"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:src="@drawable/success_check_pulse" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/success_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/dark_grey_blue" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/success_message"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@color/dark_grey_blue" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btDismiss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:padding="5dp"
        android:text="@string/dismiss_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@color/blue" />
</androidx.appcompat.widget.LinearLayoutCompat>